--- a/06_dom/two.html
+++ b/06_dom/two.html
@@ -21,9 +21,10 @@
         <h1 id="firstheading" class="title">Learning HTML DOM MANIPULATIONS <span>From : Chai Aur Code</span></h1>
         <p>Lorem ipsum dolor sit amet.</p>
         <ul>
-          <li>BOX</li>
-          <li>BOX</li>
-          <li>BOX</li>
+          <li class="list-item">BOX1</li>
+          <li class="list-item">BOX2</li>
+          <li class="list-item">BOX3</li>
+          <li class="list-item">BOX4</li>
         </ul> 
     </div>
     
@@ -35,3 +36,4 @@
 <!-- textContent shows the text which is also hidden -->
 <!-- with document.querySelector we can select elements and manipulate itsame like document.getElementById -->
 <!-- queryselectorAll we can manipulate the whole attributes(h1,li,ex...) at once, querySelectorAll gives us nodelist like array but it is not like array. nodelist does not have properties in prototype like array, it only has forEach(for loop) -->
+<!-- in getElementByclassName if we select all elements it gives us html collection ,we have to convert into array to perform loops on it  -->
